--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "next": "15.2.0",
     "node-sass": "^9.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-slick": "^0.23.13",
     "sass": "^1.85.1",
     "typescript": "^5"
   }
