added cart page and functionality

--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "compile:sass": "sass src/styles/sass/main.scss src/styles/css/style.css -w"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "next": "15.2.0",
     "node-sass": "^9.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
